--- a/k8s/clusters/staging/apps.yaml
+++ b/k8s/clusters/staging/apps.yaml
@@ -15,3 +15,7 @@ spec:
   prune: true
   wait: true
   timeout: 5m0s
+  postBuild:
+    substituteFrom:
+      - kind: Secret
+        name: pocket-id-maxmind-license-key
