Fake secrets first?

--- a/k8s/apps/base/pocket-id/kustomization.yaml
+++ b/k8s/apps/base/pocket-id/kustomization.yaml
@@ -7,3 +7,6 @@ resources:
   - repository.yaml
   - release.yaml
   - secrets.yaml
+secretGenerator:
+  - name: pocket-id-maxmind-license-key
+    namespace: pocket-id-system
