--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -18,7 +18,7 @@ spec:
   # https://github.com/anza-labs/charts/blob/main/charts/pocket-id/values.yaml
   values:
     timeZone: "America/New_York"
-    maxmindLicenseKey: "${POCKET_ID_MAXMIND_LICENSE_KEY}"
+    maxmindLicenseKey: "REDACTED"
     persistence:
       data:
         enabled: true
