--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -26,3 +26,8 @@ spec:
     ingress:
       enabled: true
       className: nginx
+      annotations:
+        nginx.ingress.kubernetes.io/configuration-snippet: |
+          proxy_busy_buffers_size 512k;
+          proxy_buffers 4 512k;
+          proxy_buffer_size 256k;
