--- a/k8s/infrastructure/controllers/ingress-nginx.yaml
+++ b/k8s/infrastructure/controllers/ingress-nginx.yaml
@@ -34,3 +34,14 @@ spec:
       interval: 12h
   values:
     enableSnippets: true
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: ingress-nginx-controller
+  namespace: ingress-nginx
+  labels:
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/part-of: ingress-nginx
+data:
+  allow-snippet-annotations: true
