--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -27,6 +27,6 @@ spec:
       enabled: true
       className: nginx
       annotations:
-        nginx.ingress.kubernetes.io/proxy-busy-buffers-size: 512k
+        nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "512k"
         nginx.ingress.kubernetes.io/proxy-buffers-number: 4
-        nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
+        nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
