--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -28,5 +28,5 @@ spec:
       className: nginx
       annotations:
         nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "512k"
-        nginx.ingress.kubernetes.io/proxy-buffers-number: 4
+        nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
         nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
