--- a/k8s/apps/staging/kustomization.yaml
+++ b/k8s/apps/staging/kustomization.yaml
@@ -15,7 +15,7 @@ replacements:
       kind: Secret
       name: pocket-id-maxmind-license-key
       namespace: pocket-id-system
-      fieldPath: credential
+      fieldPath: data.credential
     targets:
       - select:
           name: pocket-id
