Add empty value

--- a/k8s/apps/base/pocket-id/kustomization.yaml
+++ b/k8s/apps/base/pocket-id/kustomization.yaml
@@ -10,3 +10,5 @@ resources:
 secretGenerator:
   - name: pocket-id-maxmind-license-key
     namespace: pocket-id-system
+    literals:
+      - credential=''
