--- a/k8s/apps/base/pocket-id/kustomization.yaml
+++ b/k8s/apps/base/pocket-id/kustomization.yaml
@@ -11,4 +11,4 @@ secretGenerator:
   - name: pocket-id-maxmind-license-key
     namespace: pocket-id-system
     literals:
-      - credential=''
+      - credential='testing'
