--- a/k8s/apps/base/pocket-id/kustomization.yaml
+++ b/k8s/apps/base/pocket-id/kustomization.yaml
@@ -12,3 +12,15 @@ secretGenerator:
     namespace: pocket-id-system
     literals:
       - credential='testing'
+replacements:
+  - source:
+      kind: Secret
+      name: pocket-id-maxmind-license-key
+      namespace: pocket-id-system
+      fieldPath: data.credential
+    targets:
+      - select:
+          name: pocket-id
+          kind: HelmRelease
+        fieldPaths:
+          - spec.values.maxmindLicenseKey
