--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -4,6 +4,8 @@ kind: HelmRelease
 metadata:
   name: pocket-id
   namespace: pocket-id-system
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   releaseName: pocket-id
   chart:
