--- a/k8s/apps/staging/secrets/pocket-id.yaml
+++ b/k8s/apps/staging/secrets/pocket-id.yaml
@@ -3,5 +3,6 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: pocket-id-maxmind-license-key
+  namespace: pocket-id-system
 spec:
   itemPath: vaults/k8s/items/swrjn26ybykv7dlh53zowkkul4
