--- a/k8s/clusters/staging/secrets.yaml
+++ b/k8s/clusters/staging/secrets.yaml
@@ -2,16 +2,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: secrets
   namespace: flux-system
 spec:
   interval: 10m0s
   dependsOn:
-    - name: secrets
+    - name: infra-configs
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./k8s/apps/staging
+  path: ./k8s/apps/staging/secrets
   prune: true
   wait: true
   timeout: 5m0s
