Remove data key

--- a/k8s/apps/base/pocket-id/kustomization.yaml
+++ b/k8s/apps/base/pocket-id/kustomization.yaml
@@ -11,7 +11,7 @@ replacements:
       kind: Secret
       name: pocket-id-maxmind-license-key
       namespace: pocket-id-system
-      fieldPath: data.credential
+      fieldPath: credential
     targets:
       - select:
           name: pocket-id
