--- a/k8s/apps/staging/kustomization.yaml
+++ b/k8s/apps/staging/kustomization.yaml
@@ -14,6 +14,7 @@ replacements:
   - source:
       kind: Secret
       name: pocket-id-maxmind-license-key
+      namespace: pocket-id-system
       fieldPath: data.credential
     targets:
       - select:
