--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -20,6 +20,7 @@ spec:
   # https://github.com/anza-labs/charts/blob/main/charts/pocket-id/values.yaml
   values:
     timeZone: "America/New_York"
+    maxmindLicenseKey: "REDACTED"
     persistence:
       data:
         enabled: true
