--- a/k8s/apps/staging/secrets/pocket-id.yaml
+++ b/k8s/apps/staging/secrets/pocket-id.yaml
@@ -1,4 +1,9 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: pocket-id-system
+---
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
