Add namespace for dependency

--- a/k8s/infrastructure/controllers/proxmox-ccm.yaml
+++ b/k8s/infrastructure/controllers/proxmox-ccm.yaml
@@ -26,6 +26,7 @@ metadata:
 spec:
   dependsOn:
     - name: 1password
+      namespace: op-system
   interval: 30m
   chartRef:
     kind: OCIRepository
