--- a/k8s/infrastructure/storage/proxmox-csi.yaml
+++ b/k8s/infrastructure/storage/proxmox-csi.yaml
@@ -29,7 +29,7 @@ spec:
     name: proxmox-csi
     namespace: proxmox-csi-system
   values:
-    existingConfigSecret: kube-system/proxmox-cluster
+    existingConfigSecret: proxmox-cluster
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
