Duplicate secret in proxmox-csi-system namespace

--- a/k8s/infrastructure/secrets.yaml
+++ b/k8s/infrastructure/secrets.yaml
@@ -15,6 +15,21 @@ stringData:
         region: armada
 ---
 apiVersion: v1
+kind: Secret
+metadata:
+  name: proxmox-cluster
+  namespace: proxmox-csi-system
+type: Opaque
+stringData:
+  config.yaml: |
+    clusters:
+      - url: https://cantilever.addeo.net:8006/api2/json
+        insecure: true
+        token_id: {{ op://k8s/e33vetsc55hia7detdukuvryya/username }}
+        token_secret: {{ op://k8s/e33vetsc55hia7detdukuvryya/credential }}
+        region: armada
+---
+apiVersion: v1
 kind: Namespace
 metadata:
   name: op-system
