Properly base64 encode 1password-credentials.json

--- a/k8s/infrastructure/secrets.yaml
+++ b/k8s/infrastructure/secrets.yaml
@@ -42,7 +42,7 @@ metadata:
 type: Opaque
 stringData:
   1password-credentials.json: |
-    {{ op://Infrastructure/Production Credentials File/1password-credentials.json }}
+    {{ base64-op://Infrastructure/Production Credentials File/1password-credentials.json }}
 ---
 apiVersion: v1
 kind: Secret
