Ensure namespace exists during secret bootstrap

--- a/k8s/infrastructure/secrets.yaml
+++ b/k8s/infrastructure/secrets.yaml
@@ -15,6 +15,11 @@ stringData:
         region: armada
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: proxmox-csi-system
+---
+apiVersion: v1
 kind: Secret
 metadata:
   name: proxmox-cluster
