Add pocket-id ingress.tls config

--- a/k8s/apps/staging/pocket-id.yaml
+++ b/k8s/apps/staging/pocket-id.yaml
@@ -10,3 +10,7 @@ spec:
   values:
     ingress:
       host: id.staging.addeo.net
+      tls:
+        - secretName: pocket-id-tls
+          hosts:
+            - id.staging.addeo.net
