Add LE cluster-issuer annotation, remove tls config (might have to reapply that)

--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -26,6 +26,7 @@ spec:
       enabled: true
       className: nginx
       annotations:
+        cert-manager.io/cluster-issuer: letsencrypt
         # @TODO not sure if these all need to be quoted, or any.. docs say it shouldn't matter
         nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "512k"
         nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
