--- a/k8s/apps/staging/pocket-id/kustomization.yaml
+++ b/k8s/apps/staging/pocket-id/kustomization.yaml
@@ -1,11 +1,10 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../base/rancher
-  - ../base/pocket-id
-  - pocket-id
+  - secrets.yaml
 patches:
-  - path: rancher.yaml
+  - path: release.yaml
     target:
       kind: HelmRelease
-      name: rancher
+      name: pocket-id
