--- a/tofu/.gitignore
+++ b/tofu/.gitignore
@@ -35,3 +35,7 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore outputs
+production/outputs/
+staging/outputs/
