Revamp storage classes and pvc for pocket-id

--- a/k8s/apps/staging/kustomization.yaml
+++ b/k8s/apps/staging/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - ../base/rancher
   - ../base/pocket-id
-  - pocket-id/pvc.yaml
+  - pocket-id/volumes.yaml
   - pocket-id/secrets.yaml
 patches:
   - path: rancher/release.yaml
