--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -19,9 +19,7 @@ spec:
   values:
     timeZone: "America/New_York"
     persistence:
-      data:
-        enabled: true
-        storageClass: vmpool
+      existingClaim: pocket-id-data
     ingress:
       enabled: true
       className: nginx
