--- a/k8s/apps/staging/pocket-id/volumes.yaml
+++ b/k8s/apps/staging/pocket-id/volumes.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pvc-4444c22c-345f-4319-92bf-67ee24187107
+  name: pvc-pocket-id-data-staging
 spec:
   accessModes:
     - ReadWriteOnce
@@ -13,15 +13,13 @@ spec:
     fsType: xfs
     volumeAttributes:
       storage: vmpool
-      cache: writethrough
-      ssd: "true"
-    volumeHandle: armada/crimson/vmpool/vm-9999-pvc-4444c22c-345f-4319-92bf-67ee24187107
-  storageClassName: vmpool
+    volumeHandle: armada/crimson/vmpool/vm-9999-pvc-pocket-id-data-staging
+  storageClassName: vmpool-persistent
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pocket-id-data-pocket-id-0
+  name: pocket-id-data
   namespace: pocket-id-system
 spec:
   accessModes:
@@ -29,5 +27,5 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: vmpool
-  volumeName: pvc-4444c22c-345f-4319-92bf-67ee24187107
+  storageClassName: vmpool-persistent
+  volumeName: pvc-pocket-id-data-staging
