--- a/k8s/infrastructure/storage/proxmox-csi.yaml
+++ b/k8s/infrastructure/storage/proxmox-csi.yaml
@@ -34,7 +34,24 @@ spec:
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: vmpool
+  name: vmpool-persistent
+parameters:
+  csi.storage.k8s.io/fstype: xfs
+  storage: vmpool
+  cache: writethrough
+  ssd: "true"
+mountOptions:
+  - noatime
+provisioner: csi.proxmox.sinextra.dev
+reclaimPolicy: Retain
+volumeBindingMode: WaitForFirstConsumer
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: vmpool-ephemeral
+annotations:
+  storageclass.kubernetes.io/is-default-class: "true"
 parameters:
   csi.storage.k8s.io/fstype: xfs
   storage: vmpool
