--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -18,6 +18,12 @@ spec:
   # https://github.com/anza-labs/charts/blob/main/charts/pocket-id/values.yaml
   values:
     timeZone: "America/New_York"
+    config:
+      publicUI:
+        settings:
+          app:
+            appName: AddeoID
+            disableAnimations: true
     persistence:
       existingClaim: pocket-id-data
     ingress:
