Enable persistent for pocket-id

--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -25,6 +25,7 @@ spec:
             appName: AddeoID
             disableAnimations: true
     persistence:
+      enabled: true
       existingClaim: pocket-id-data
     ingress:
       enabled: true
