--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -25,8 +25,9 @@ spec:
             appName: AddeoID
             disableAnimations: true
     persistence:
-      enabled: true
-      existingClaim: pocket-id-data
+      data:
+        enabled: true
+        existingClaim: pocket-id-data
     ingress:
       enabled: true
       className: nginx
