Dont use defaults for pocket-id app settings

--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -20,6 +20,7 @@ spec:
     timeZone: "America/New_York"
     config:
       publicUI:
+        useDefaults: false
         settings:
           app:
             appName: AddeoID
