Add Let's Encrypt (STAGING) CAs rancher secret

--- a/k8s/apps/staging/kustomization.yaml
+++ b/k8s/apps/staging/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../base/pocket-id
   - pocket-id/volumes.yaml
   - pocket-id/secrets.yaml
+  - rancher/secrets.yaml
 patches:
   - path: rancher/release.yaml
     target:
