--- a/k8s/apps/staging/kustomization.yaml
+++ b/k8s/apps/staging/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../base/rancher
   - ../base/pocket-id
+  - pocket-id/pvc.yaml
   - pocket-id/secrets.yaml
 patches:
   - path: rancher/release.yaml
