--- a/k8s/apps/staging/pocket-id/secrets.yaml
+++ b/k8s/apps/staging/pocket-id/secrets.yaml
@@ -6,3 +6,11 @@ metadata:
   namespace: pocket-id-system
 spec:
   itemPath: vaults/k8s/items/swrjn26ybykv7dlh53zowkkul4
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: pocket-id-smtp-credentials
+  namespace: pocket-id-system
+spec:
+  itemPath: vaults/k8s/items/nz6k45hdgucn6fi5x67vbwhqhi
