Update pocket-id config to consider emails verified

--- a/k8s/apps/base/pocket-id/release.yaml
+++ b/k8s/apps/base/pocket-id/release.yaml
@@ -25,6 +25,7 @@ spec:
           app:
             appName: AddeoID
             disableAnimations: true
+            emailsVerified: true
           smtp:
             host: smtp.mailgun.org
             port: "465"
