Add LGTM monitoring stack

--- a/k8s/apps/staging/kustomization.yaml
+++ b/k8s/apps/staging/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../base/oauth2-proxy
   - ../base/capacitor
   - ../base/proxmox
+  - ../base/lgtm-stack
   - pocket-id/volumes.yaml
   - pocket-id/secrets.yaml
   - rancher/secrets.yaml
@@ -27,3 +28,7 @@ patches:
     target:
       kind: Ingress
       name: proxmox
+  - path: lgtm-stack/release.yaml
+    target:
+      kind: HelmRelease
+      name: lgtm-stack
