Migrate pocket-id to pocket-id-operator

--- a/k8s/infrastructure/configs/pocket-id/secrets.yaml
+++ b/k8s/infrastructure/configs/pocket-id/secrets.yaml
@@ -2,6 +2,14 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
+  name: pocket-id-encryption-key
+  namespace: pocket-id-system
+spec:
+  itemPath: vaults/k8s/items/uhumocucbyqeoshnjtpy2jv7qm
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
   name: pocket-id-maxmind-license-key
   namespace: pocket-id-system
 spec:
@@ -14,3 +22,11 @@ metadata:
   namespace: pocket-id-system
 spec:
   itemPath: vaults/k8s/items/nz6k45hdgucn6fi5x67vbwhqhi
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: pocket-id-admin-user
+  namespace: pocket-id-system
+spec:
+  itemPath: vaults/k8s/items/25olxlry7sg6im6kxw2bjcq4wa
