Add and configure separate LGTM stack charts

--- a/k8s/clusters/staging/apps.yaml
+++ b/k8s/clusters/staging/apps.yaml
@@ -10,6 +10,7 @@ spec:
     - name: infra-controllers
     - name: infra-configs
     - name: infra-storage
+    - name: infra-monitoring
   sourceRef:
     kind: GitRepository
     name: flux-system
