--- a/k8s/apps/staging/capacitor/secrets.yaml
+++ b/k8s/apps/staging/capacitor/secrets.yaml
@@ -6,3 +6,11 @@ metadata:
   namespace: flux-system
 spec:
   itemPath: vaults/k8s/items/uhumocucbyqeoshnjtpy2jv7qm
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: oauth2-proxy-redis-credentials
+  namespace: flux-system
+spec:
+  itemPath: vaults/k8s/items/q22dgggmj7a7d72gqonip2gdna
