--- a/k8s/apps/base/oauth2-proxy/resourceset.yaml
+++ b/k8s/apps/base/oauth2-proxy/resourceset.yaml
@@ -57,15 +57,15 @@ spec:
             existingConfig: oauth2-proxy-config
           sessionStorage:
             type: redis
-            redis:
-              standalone:
-                connectionUrl: redis://placeholder
-          extraEnv:
-            - name: OAUTH2_PROXY_REDIS_CONNECTION_URL
-              valueFrom:
-                secretKeyRef:
-                  name: oauth2-proxy-redis-credentials
-                  key: redis-url
+            # redis:
+            #   standalone:
+            #     connectionUrl: redis://placeholder
+          # extraEnv:
+          #   - name: OAUTH2_PROXY_REDIS_CONNECTION_URL
+          #     valueFrom:
+          #       secretKeyRef:
+          #         name: oauth2-proxy-redis-credentials
+          #         key: redis-url
           ingress:
             enabled: true
             className: nginx
@@ -77,9 +77,11 @@ spec:
               - secretName: oauth2-proxy-tls
                 hosts:
                   - << inputs.host >>
-          redis:
+          redis-ha:
             enabled: true
-            architecture: standalone
-            auth:
-              existingSecret: oauth2-proxy-redis-credentials
-              existingSecretPasswordKey: redis-password
+          # redis:
+          #   enabled: true
+          #   architecture: standalone
+          #   auth:
+          #     existingSecret: oauth2-proxy-redis-credentials
+          #     existingSecretPasswordKey: redis-password
