--- a/k8s/apps/staging/kustomization.yaml
+++ b/k8s/apps/staging/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - rancher/secrets.yaml
   - capacitor/auth.yaml
   - capacitor/secrets.yaml
+  - capacitor/secret-remapper.yaml
 patches:
   - path: rancher/release.yaml
     target:
