remove trailing comma

--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -103,7 +103,7 @@ spec:
                   value: |
                     {
                       "client_id": "client-id",
-                      "client_secret": "client-secret",
+                      "client_secret": "client-secret"
                     }
                 - name: GENERATED_KEYS
                   value: "cookie-secret redis-password"
