alphanumeric only pls

--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -36,7 +36,7 @@ data:
         echo "Key '$key': Generating new value."
         # Generate 32 bytes from urandom and base64 encode it (standard for cookie-secrets)
         # We replace newlines just in case
-        VAL=$(head -c 32 /dev/urandom | base64 | tr -d '\n')
+        VAL=$(tr -dc 'A-Za-z0-9' < /dev/urandom | head -c 32 | base64 | tr -d '\n')
       fi
 
       # Add to our JSON fragment
@@ -106,7 +106,7 @@ spec:
                       "client_secret": "client-secret"
                     }
                 - name: GENERATED_KEYS
-                  value: "cookie-secret redis-password"
+                  value: "cookie-secret"
               volumeMounts:
                 - name: script-vol
                   mountPath: /scripts
