--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -13,7 +13,7 @@ data:
   map.client-id: client-id
   map.client-secret: client-secret
 
-  gen.cookie-secret: true
+  gen.cookie-secret: "true"
 # --- 1. RBAC: Permissions for this Namespace Only ---
 ---
 apiVersion: v1
