--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -20,13 +20,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: secret-sync-sa
-  namespace: flux-operator # <--- CHANGE THIS PER NAMESPACE
+  namespace: flux-system # <--- CHANGE THIS PER NAMESPACE
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: secret-sync-role
-  namespace: flux-operator # <--- CHANGE THIS PER NAMESPACE
+  namespace: flux-system # <--- CHANGE THIS PER NAMESPACE
 rules:
   - apiGroups: [""]
     resources: ["configmaps"]
@@ -39,7 +39,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: secret-sync-binding
-  namespace: flux-operator # <--- CHANGE THIS PER NAMESPACE
+  namespace: flux-system # <--- CHANGE THIS PER NAMESPACE
 subjects:
   - kind: ServiceAccount
     name: secret-sync-sa
@@ -53,7 +53,7 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: secret-sync-controller
-  namespace: flux-operator # <--- CHANGE THIS PER NAMESPACE
+  namespace: flux-system # <--- CHANGE THIS PER NAMESPACE
 spec:
   schedule: "* * * * *"
   successfulJobsHistoryLimit: 1
