--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: oauth2-proxy-sync-config
-  namespace: my-app
+  namespace: flux-system
   labels:
     secret-sync.controller/enabled: "true"
 data:
