--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     secret-sync.controller/enabled: "true"
 data:
-  sourceSecret: oidc-provider-secret
+  sourceSecret: capacitor-oidc-credentials
   targetSecret: oauth2-proxy-secret
 
   map.client-id: client-id
