--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -71,18 +71,14 @@ spec:
               command: ["/bin/bash", "-c"]
               args:
                 - |
+                  # Enable strict mode but add an error trap for debugging
                   set -euo pipefail
+                  trap 'echo "Error on line $LINENO"' ERR
 
-                  # --- CONFIGURATION ---
-                  # The label we look for to activate sync logic
-                  TRIGGER_LABEL="secret-sync.controller/enabled=true"
-
-                  # --- RUNTIME ---
                   NS=$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)
                   echo "--- Running in Namespace: $NS ---"
 
-                  # 1. DISCOVER
-                  CONFIGS=$(kubectl get configmaps -n "$NS" -l $TRIGGER_LABEL -o json)
+                  CONFIGS=$(kubectl get configmaps -n "$NS" -l secret-sync.controller/enabled=true -o json)
                   COUNT=$(echo "$CONFIGS" | jq '.items | length')
 
                   if [[ "$COUNT" -eq 0 ]]; then
@@ -91,58 +87,59 @@ spec:
                   fi
 
                   for ((i=0; i<COUNT; i++)); do
+                    # Extract Item safely
                     ITEM=$(echo "$CONFIGS" | jq ".items[$i]")
                     NAME=$(echo "$ITEM" | jq -r ".metadata.name")
 
-                    # Capture UID for Owner Reference (Garbage Collection)
+                    # Capture UID for Owner Reference
                     CM_UID=$(echo "$ITEM" | jq -r ".metadata.uid")
 
-                    # Extract Standard Fields
                     SRC=$(echo "$ITEM" | jq -r ".data.sourceSecret // empty")
                     TGT=$(echo "$ITEM" | jq -r ".data.targetSecret // empty")
 
                     if [[ -z "$SRC" || -z "$TGT" ]]; then
-                       echo "Skipping '$NAME': Missing sourceSecret or targetSecret."
-                       continue
+                      echo "Skipping '$NAME': Missing source/target."
+                      continue
                     fi
 
                     echo "Syncing '$NAME': $SRC -> $TGT"
 
-                    # 2. EXTRACT MAPS (Prefix: map.)
-                    # logic: { key: "TargetKey", value: "SourceKey" }
+                    # 1. EXTRACT MAPS (Safe Mode)
+                    # We force '|| echo "{}"' so the pipeline never returns exit code 1
                     KEYS=$(echo "$ITEM" | jq -c '
-                      .data | to_entries
+                      (.data // {}) | to_entries
                       | map(select(.key | startswith("map.")))
-                      | map({key: .key | sub("map.";""), value: .value})
-                      | from_entries'
-                    )
+                      | map({key: .key | sub("map\\.";""), value: .value})
+                      | from_entries' || echo "{}")
 
-                    # 3. EXTRACT GENERATORS (Prefix: gen.)
+                    # 2. EXTRACT GENERATORS (Safe Mode)
                     GEN_KEYS_LIST=$(echo "$ITEM" | jq -r '
-                      .data | keys[] | select(startswith("gen.")) | sub("gen.";"")'
-                    )
+                      (.data // {}) | keys[] | select(startswith("gen.")) | sub("gen\\.";"")' || echo "")
 
                     # --- SYNC LOGIC ---
 
-                    # A. Handle Generated Keys (Idempotent)
+                    # A. Handle Generated Keys
                     TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
                     GEN_JSON="{}"
 
-                    for key in $GEN_KEYS_LIST; do
-                      EXISTING=""
-                      if [[ -n "$TGT_JSON" ]]; then
-                        EXISTING=$(echo "$TGT_JSON" | jq -r --arg k "$key" '.data[$k] // empty')
-                      fi
+                    # Only loop if we actually have keys
+                    if [[ -n "$GEN_KEYS_LIST" ]]; then
+                      for key in $GEN_KEYS_LIST; do
+                        EXISTING=""
+                        if [[ -n "$TGT_JSON" ]]; then
+                          EXISTING=$(echo "$TGT_JSON" | jq -r --arg k "$key" '.data[$k] // empty')
+                        fi
 
-                      if [[ -n "$EXISTING" ]]; then
-                         VAL="$EXISTING"
-                      else
-                         # Generate 32-char Alphanumeric -> Base64
-                         RAW=$(LC_ALL=C tr -dc 'A-Za-z0-9' < /dev/urandom | head -c 32)
-                         VAL=$(echo -n "$RAW" | base64 | tr -d '\n')
-                      fi
-                      GEN_JSON=$(echo "$GEN_JSON" | jq -c --arg k "$key" --arg v "$VAL" '.[$k] = $v')
-                    done
+                        if [[ -n "$EXISTING" ]]; then
+                          VAL="$EXISTING"
+                        else
+                          # Generate 32-char Alphanumeric -> Base64
+                          RAW=$(LC_ALL=C tr -dc 'A-Za-z0-9' < /dev/urandom | head -c 32)
+                          VAL=$(echo -n "$RAW" | base64 | tr -d '\n')
+                        fi
+                        GEN_JSON=$(echo "$GEN_JSON" | jq -c --arg k "$key" --arg v "$VAL" '.[$k] = $v')
+                      done
+                    fi
 
                     # B. Get Source
                     SRC_JSON=$(kubectl get secret "$SRC" -n "$NS" -o json 2>/dev/null || true)
@@ -152,43 +149,38 @@ spec:
                     fi
 
                     # C. Build Proposed Secret
-                    # Includes OwnerReference so deleting the ConfigMap deletes the Secret
                     PROPOSED=$(echo "$SRC_JSON" | jq -c --arg name "$TGT" \
-                                         --arg ns "$NS" \
-                                         --arg cm_name "$NAME" \
-                                         --arg cm_uid "$CM_UID" \
-                                         --argjson map "$KEYS" \
-                                         --argjson gen "$GEN_JSON" '
+                                        --arg ns "$NS" \
+                                        --arg cm_name "$NAME" \
+                                        --arg cm_uid "$CM_UID" \
+                                        --argjson map "$KEYS" \
+                                        --argjson gen "$GEN_JSON" '
                       .metadata = {
                         "name": $name,
                         "namespace": $ns,
                         "annotations": { "secret-sync.controller/managed": "true" },
                         "ownerReferences": [{
-                           "apiVersion": "v1",
-                           "kind": "ConfigMap",
-                           "name": $cm_name,
-                           "uid": $cm_uid,
-                           "blockOwnerDeletion": true,
-                           "controller": true
+                          "apiVersion": "v1",
+                          "kind": "ConfigMap",
+                          "name": $cm_name,
+                          "uid": $cm_uid,
+                          "blockOwnerDeletion": true,
+                          "controller": true
                         }]
                       } |
 
-                      # 1. Map Keys (Source -> Target)
                       reduce ($map | to_entries[]) as $i (.; .data[$i.key] = .data[$i.value]) |
-
-                      # 2. Inject Generated Keys
                       reduce ($gen | to_entries[]) as $i (.; .data[$i.key] = $i.value) |
-
-                      # 3. Clean Unused Source Keys
                       reduce ($map | to_entries[]) as $i (.; if $i.key != $i.value then del(.data[$i.value]) else . end) |
 
-                      # 4. SAFETY: Remove nulls (if source key was missing)
                       .data |= with_entries(select(.value != null))
                     ')
 
                     # D. Apply
                     if [[ -z "$TGT_JSON" ]] || ! echo "$TGT_JSON" | jq -e --argjson new "$PROPOSED" '.data == $new.data' >/dev/null; then
-                       echo "$PROPOSED" | kubectl apply -f -
-                       echo "  Synced successfully."
+                      echo "$PROPOSED" | kubectl apply -f -
+                      echo "  Synced successfully."
+                    else
+                      echo "  No changes."
                     fi
                   done
