Maybe we do a workie

--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -8,7 +8,7 @@ metadata:
     secret-sync.controller/enabled: "true"
 data:
   sourceSecret: capacitor-oidc-credentials
-  targetSecret: oauth2-proxy-secret
+  targetSecret: oauth2-proxy-creds
 
   map.client-id: client-id
   map.client-secret: client-secret
@@ -71,9 +71,9 @@ spec:
               command: ["/bin/bash", "-c"]
               args:
                 - |
-                  # Enable strict mode but add an error trap for debugging
+                  # Robust Error Trapping
                   set -euo pipefail
-                  trap 'echo "Error on line $LINENO"' ERR
+                  trap 'echo "Error on line $LINENO. Last command: $BASH_COMMAND"' ERR
 
                   NS=$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)
                   echo "--- Running in Namespace: $NS ---"
@@ -87,13 +87,10 @@ spec:
                   fi
 
                   for ((i=0; i<COUNT; i++)); do
-                    # Extract Item safely
+                    # 1. Safe Item Extraction
                     ITEM=$(echo "$CONFIGS" | jq ".items[$i]")
                     NAME=$(echo "$ITEM" | jq -r ".metadata.name")
-
-                    # Capture UID for Owner Reference
                     CM_UID=$(echo "$ITEM" | jq -r ".metadata.uid")
-
                     SRC=$(echo "$ITEM" | jq -r ".data.sourceSecret // empty")
                     TGT=$(echo "$ITEM" | jq -r ".data.targetSecret // empty")
 
@@ -104,25 +101,14 @@ spec:
 
                     echo "Syncing '$NAME': $SRC -> $TGT"
 
-                    # 1. EXTRACT MAPS (Safe Mode)
-                    # We force '|| echo "{}"' so the pipeline never returns exit code 1
-                    KEYS=$(echo "$ITEM" | jq -c '
-                      (.data // {}) | to_entries
-                      | map(select(.key | startswith("map.")))
-                      | map({key: .key | sub("map\\.";""), value: .value})
-                      | from_entries' || echo "{}")
+                    # 2. Prepare Inputs (With defaults to prevent crashes)
+                    KEYS=$(echo "$ITEM" | jq -c '(.data // {}) | to_entries | map(select(.key | startswith("map."))) | map({key: .key | sub("map\\.";""), value: .value}) | from_entries' || echo "{}")
+                    GEN_KEYS_LIST=$(echo "$ITEM" | jq -r '(.data // {}) | keys[] | select(startswith("gen.")) | sub("gen\\.";"")' || echo "")
 
-                    # 2. EXTRACT GENERATORS (Safe Mode)
-                    GEN_KEYS_LIST=$(echo "$ITEM" | jq -r '
-                      (.data // {}) | keys[] | select(startswith("gen.")) | sub("gen\\.";"")' || echo "")
-
-                    # --- SYNC LOGIC ---
-
-                    # A. Handle Generated Keys
+                    # 3. Handle Generated Keys (Target Side)
                     TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
                     GEN_JSON="{}"
 
-                    # Only loop if we actually have keys
                     if [[ -n "$GEN_KEYS_LIST" ]]; then
                       for key in $GEN_KEYS_LIST; do
                         EXISTING=""
@@ -133,7 +119,7 @@ spec:
                         if [[ -n "$EXISTING" ]]; then
                           VAL="$EXISTING"
                         else
-                          # Generate 32-char Alphanumeric -> Base64
+                          # Generate Random Value
                           RAW=$(LC_ALL=C tr -dc 'A-Za-z0-9' < /dev/urandom | head -c 32)
                           VAL=$(echo -n "$RAW" | base64 | tr -d '\n')
                         fi
@@ -141,20 +127,24 @@ spec:
                       done
                     fi
 
-                    # B. Get Source
+                    # 4. Get Source
                     SRC_JSON=$(kubectl get secret "$SRC" -n "$NS" -o json 2>/dev/null || true)
                     if [[ -z "$SRC_JSON" ]]; then
                       echo "  Source '$SRC' missing. Waiting..."
                       continue
                     fi
 
-                    # C. Build Proposed Secret
+                    # 5. Build Proposed Secret (THE FIX IS HERE)
                     PROPOSED=$(echo "$SRC_JSON" | jq -c --arg name "$TGT" \
                                         --arg ns "$NS" \
                                         --arg cm_name "$NAME" \
                                         --arg cm_uid "$CM_UID" \
                                         --argjson map "$KEYS" \
                                         --argjson gen "$GEN_JSON" '
+
+                      # SAFETY FIRST: Initialize .data if it is null
+                      .data = (.data // {}) |
+
                       .metadata = {
                         "name": $name,
                         "namespace": $ns,
@@ -169,14 +159,20 @@ spec:
                         }]
                       } |
 
+                      # Logic: Map Source Keys -> Target
                       reduce ($map | to_entries[]) as $i (.; .data[$i.key] = .data[$i.value]) |
+
+                      # Logic: Inject Generated Keys
                       reduce ($gen | to_entries[]) as $i (.; .data[$i.key] = $i.value) |
+
+                      # Logic: Clean Unused Source Keys
                       reduce ($map | to_entries[]) as $i (.; if $i.key != $i.value then del(.data[$i.value]) else . end) |
 
+                      # Logic: Remove Nulls (Failed Mappings)
                       .data |= with_entries(select(.value != null))
                     ')
 
-                    # D. Apply
+                    # 6. Apply
                     if [[ -z "$TGT_JSON" ]] || ! echo "$TGT_JSON" | jq -e --argjson new "$PROPOSED" '.data == $new.data' >/dev/null; then
                       echo "$PROPOSED" | kubectl apply -f -
                       echo "  Synced successfully."
