--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -87,7 +87,6 @@ spec:
                   fi
 
                   for ((i=0; i<COUNT; i++)); do
-                    # 1. Safe Item Extraction
                     ITEM=$(echo "$CONFIGS" | jq ".items[$i]")
                     NAME=$(echo "$ITEM" | jq -r ".metadata.name")
                     CM_UID=$(echo "$ITEM" | jq -r ".metadata.uid")
@@ -101,11 +100,9 @@ spec:
 
                     echo "Syncing '$NAME': $SRC -> $TGT"
 
-                    # 2. Prepare Inputs (With defaults to prevent crashes)
                     KEYS=$(echo "$ITEM" | jq -c '(.data // {}) | to_entries | map(select(.key | startswith("map."))) | map({key: .key | sub("map\\.";""), value: .value}) | from_entries' || echo "{}")
                     GEN_KEYS_LIST=$(echo "$ITEM" | jq -r '(.data // {}) | keys[] | select(startswith("gen.")) | sub("gen\\.";"")' || echo "")
 
-                    # 3. Handle Generated Keys (Target Side)
                     TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
                     GEN_JSON="{}"
 
@@ -119,32 +116,27 @@ spec:
                         if [[ -n "$EXISTING" ]]; then
                           VAL="$EXISTING"
                         else
-                          # Generate Random Value
-                          RAW=$(LC_ALL=C tr -dc 'A-Za-z0-9' < /dev/urandom | head -c 32)
+                          # FIX IS HERE: Read fixed chunk -> Filter -> Cut
+                          RAW=$(head -c 512 /dev/urandom | LC_ALL=C tr -dc 'A-Za-z0-9' | head -c 32)
                           VAL=$(echo -n "$RAW" | base64 | tr -d '\n')
                         fi
                         GEN_JSON=$(echo "$GEN_JSON" | jq -c --arg k "$key" --arg v "$VAL" '.[$k] = $v')
                       done
                     fi
 
-                    # 4. Get Source
                     SRC_JSON=$(kubectl get secret "$SRC" -n "$NS" -o json 2>/dev/null || true)
                     if [[ -z "$SRC_JSON" ]]; then
                       echo "  Source '$SRC' missing. Waiting..."
                       continue
                     fi
 
-                    # 5. Build Proposed Secret (THE FIX IS HERE)
                     PROPOSED=$(echo "$SRC_JSON" | jq -c --arg name "$TGT" \
                                         --arg ns "$NS" \
                                         --arg cm_name "$NAME" \
                                         --arg cm_uid "$CM_UID" \
                                         --argjson map "$KEYS" \
                                         --argjson gen "$GEN_JSON" '
-
-                      # SAFETY FIRST: Initialize .data if it is null
                       .data = (.data // {}) |
-
                       .metadata = {
                         "name": $name,
                         "namespace": $ns,
@@ -158,21 +150,12 @@ spec:
                           "controller": true
                         }]
                       } |
-
-                      # Logic: Map Source Keys -> Target
                       reduce ($map | to_entries[]) as $i (.; .data[$i.key] = .data[$i.value]) |
-
-                      # Logic: Inject Generated Keys
                       reduce ($gen | to_entries[]) as $i (.; .data[$i.key] = $i.value) |
-
-                      # Logic: Clean Unused Source Keys
                       reduce ($map | to_entries[]) as $i (.; if $i.key != $i.value then del(.data[$i.value]) else . end) |
-
-                      # Logic: Remove Nulls (Failed Mappings)
                       .data |= with_entries(select(.value != null))
                     ')
 
-                    # 6. Apply
                     if [[ -z "$TGT_JSON" ]] || ! echo "$TGT_JSON" | jq -e --argjson new "$PROPOSED" '.data == $new.data' >/dev/null; then
                       echo "$PROPOSED" | kubectl apply -f -
                       echo "  Synced successfully."
