--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -10,8 +10,8 @@ data:
   sourceSecret: capacitor-oidc-credentials
   targetSecret: oauth2-proxy-creds
 
-  map.client-id: client-id
-  map.client-secret: client-secret
+  map.client-id: client_id
+  map.client-secret: client_secret
 
   gen.cookie-secret: "true"
 # --- 1. RBAC: Permissions for this Namespace Only ---
